--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "waypoints": "^4.0.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0-beta.2"
   }
 }
